// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields shows notice for additions 1`] = `
"input AddedInput { 
  
  # Warning
  firstName: String!

  # Notice
  lastName: String

}

type User { 
  
  # Notice
  firstName: String!

}

enum AddedEnum { 
  
  # Notice
  TWO

}

interface AddedInterface { 
  
  # Notice
  firstName(arg: String): String

}

"
`;

exports[`fields shows warning for removals 1`] = `
"type User { 
  
  # Warning
  firstName: String!

}

enum AddedEnum { 
  
  # Warning
  TWO

}

input AddedInput { 
  
  # Warning
  firstName: String!
  lastName: String

}

interface AddedInterface { 
  
  # Warning
  firstName(arg: String): String

}

"
`;

exports[`types shows added types 1`] = `
"type AddedType { 
  id: ID!
}

enum AddedEnum { 
  ONE
}

input AddedInput { 
  id: ID!
}

scalar AddedScalar

interface AddedInterface { 
  id: ID!
}

union AddedUnion = User

"
`;

exports[`types shows removed types 1`] = `
"type RemovedType { }

enum RemovedEnum { }

input RemovedInput { }

scalar RemovedScalar

interface RemovedInterface { }

union RemovedUnion = User

"
`;
